# CHIP8-Emulator

./: .gitignore  CHIP-8-Emulator_en_BE.ts  CMakeLists.txt  README.md  emulator.cpp  emulator.h  emulator.ui  viewport.cpp  viewport.h
CHIP-8/: CMakeLists.txt  OpCodeHandler.cpp  OpCodeHandler.h  VM.cpp  VM.h
Emulator/: CMakeLists.txt  Emulator.cpp  Emulator.h
Include/: CMakeLists.txt
Include/stb/: CMakeLists.txt
QT/: CHIP-8-Emulator_en_BE.ts  CHIP-8-Frontend_en_BE.ts  CMakeLists.txt  clockspeedwindow.cpp  clockspeedwindow.h  clockspeedwindow.ui  emulator.cpp  emulatorviewport.cpp  emulatorviewport.h  emulatorwindow.cpp  emulatorwindow.h  emulatorwindow.ui  main.cpp  viewport.cpp  viewport.h
Roms/: CustomTest.rom
Shaders/: 2D.frag  2D.vert
